FWA-53: Prevent overflow of content in markdown container

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,7 @@ p:last-child {
      50% { opacity: 1; }
     100% { opacity: 0; }
 }
+
+#eventMarkdown * {
+  max-width: 100%;
+}
